--- a/src/App.css
+++ b/src/App.css
@@ -15,19 +15,28 @@
 }
 
 .button--black {
-  @apply text-white hover:bg-black;
-  background: #ffffff;
-  box-shadow: 5px 5px 3px #d5d5d5, -5px -5px 3px #f7f7f7;
+  @apply text-white hover:bg-gray-800 bg-gray-700 cursor-pointer;
+  box-shadow: 3px 3px 5px #252525, -3px -3px 5px #525252;
 }
 
-.button--block {
-  @apply text-red-500;
+.button--red {
+  @apply text-red-500 border border-red-500 hover:bg-red-500 hover:text-white cursor-pointer;
   background: #ffffff;
-  box-shadow: 5px 5px 3px #d5d5d5, -5px -5px 3px #f7f7f7;
+  box-shadow: 3px 3px 5px #c5c5c5, -3px -3px 5px #e6e6e6;
 }
 
 .button--gray {
   @apply hover:bg-gray-200 cursor-pointer;
   background: #f1f1f6;
   box-shadow: 3px 3px 5px #9e9e9e, -3px -3px 5px #f7f7f7;
+}
+
+.label {
+  @apply block uppercase text-xs font-bold mb-6;
+}
+
+.input {
+  @apply w-full rounded-xl p-2 focus:outline-none focus:bg-white focus:border-gray-500;
+  background: #f3f4f6;
+  box-shadow: inset 0.2em 0.2em calc(0.2em * 2) #adb4c2, inset calc(0.2em * -1) calc(0.2em * -1) calc(0.2em * 2) #ffffff;
 }
