--- a/src/components/shared/Footer.module.css
+++ b/src/components/shared/Footer.module.css
@@ -1,4 +1,4 @@
-@import '../index.css';
+@import '../../index.css';
 
 .footer {
     @apply shadow bg-gradient-to-r from-pink-500 to-purple-500 h-(--h-md) text-xs text-right pr-2 text-white relative
