--- a/src/components/private/new/Details.module.css
+++ b/src/components/private/new/Details.module.css
@@ -1,4 +1,4 @@
-@import '../../index.css';
+@import '../../../index.css';
 
 .buttons {
     @apply bg-gradient-to-r from-gray-600 via-gray-200 to-gray-200 px-4 py-3 flex justify-between
